--- a/src/app/modules/dashboard/dashboard.component.html
+++ b/src/app/modules/dashboard/dashboard.component.html
@@ -69,8 +69,8 @@
             <p-dropdown [options]="meses_anio" [(ngModel)]="selectedCity" [style]="{'width':'100%'}"></p-dropdown>
 
             <div class="mb-0 pt-3">
-              <a href="javascript::;" class="btn btn-sm btn-primary btn-flat pull-left"><i class="fa fa-save"></i> Cambiar Mes</a>
-              <a href="javascript::;" (click)="cambiar_mes=!cambiar_mes" class="btn btn-sm btn-danger btn-flat pull-right"><i class="fa fa-times"></i> Cancelar</a>
+              <a href="javascript::;" class="btn btn-sm btn-primary pull-left"><i class="fa fa-save"></i> Cambiar Mes</a>
+              <a href="javascript::;" (click)="cambiar_mes=!cambiar_mes" class="btn btn-sm btn-danger pull-right"><i class="fa fa-times"></i> Cancelar</a>
             </div>
           </div>
         </div>
