--- a/src/app/modules/login/login.component.html
+++ b/src/app/modules/login/login.component.html
@@ -5,32 +5,24 @@
         <div class="card-group mb-0">
           <div class="card p-4">
             <div class="card-block">
-              <h1>Login</h1>
-              <p class="text-muted">Sign In to your account</p>
+              <h1>Iniciar Sesión</h1>
+              <p class="text-muted">Inicie sesión con su usuario</p>
               <div class="input-group mb-3">
                 <span class="input-group-addon"><i class="icon-user"></i></span>
-                <input type="text" class="form-control" placeholder="Username">
+                <input type="text" class="form-control" placeholder="Usuario">
               </div>
               <div class="input-group mb-4">
                 <span class="input-group-addon"><i class="icon-lock"></i></span>
-                <input type="password" class="form-control" placeholder="Password">
+                <input type="password" class="form-control" placeholder="Contraseña">
               </div>
-              <div class="row">
-                <div class="col-6">
-                  <button type="button" [routerLink]="['/dashboard']" class="btn btn-primary px-4">Login</button>
-                </div>
-                <div class="col-6 text-right">
-                  <button type="button" class="btn btn-link px-0">Forgot password?</button>
-                </div>
-              </div>
+              <button type="button" [routerLink]="['/dashboard']" class="btn btn-primary px-4 pull-right">Iniciar</button>
             </div>
           </div>
           <div class="card card-inverse card-primary py-5 d-md-down-none" style="width:44%">
             <div class="card-block text-center">
               <div>
-                <h2>Sign up</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                <button type="button" class="btn btn-primary active mt-3">Register Now!</button>
+                <h2>CPC</h2>
+                <p>Sistema de Control de Producción y Costos</p>
               </div>
             </div>
           </div>
