--- a/src/app/layouts/full-layout.component.html
+++ b/src/app/layouts/full-layout.component.html
@@ -28,7 +28,7 @@
     <li class="nav-item dropdown" dropdown (onToggle)="toggled($event)" style="padding-right: 15px;">
       <a href class="nav-link dropdown-toggle" dropdownToggle (click)="false">
         <img src="assets/img/avatars/6.jpg" class="img-avatar" alt="admin@bootstrapmaster.com">
-        <span class="d-md-down-none">admin</span>
+        <span class="d-md-down-none">{{user}}</span>
       </a>
       <div class="dropdown-menu dropdown-menu-right" *dropdownMenu aria-labelledby="simple-dropdown">        
         <a class="dropdown-item" href="#"><i class="fa fa-user"></i> Profile</a>        
