--- a/src/app/modules/login/login.component.html
+++ b/src/app/modules/login/login.component.html
@@ -1,6 +1,9 @@
 <div class="app flex-row align-items-center">
   <div class="container">
     <div class="row justify-content-center">
+      <p-messages [(value)]="msgs" style="width: 64%"></p-messages>
+    </div>    
+    <div class="row justify-content-center">      
       <div class="col-md-8">
         <div class="card-group mb-0">
           <div class="card p-4">
@@ -9,11 +12,11 @@
               <p class="text-muted">Inicie sesión con su usuario</p>
               <div class="input-group mb-3">
                 <span class="input-group-addon"><i class="icon-user"></i></span>
-                <input type="text" class="form-control" placeholder="Usuario">
+                <input type="text" class="form-control" [(ngModel)]="credenciales.email" placeholder="Usuario" >
               </div>
               <div class="input-group mb-4">
                 <span class="input-group-addon"><i class="icon-lock"></i></span>
-                <input type="password" class="form-control" placeholder="Contraseña">
+                <input type="password" class="form-control" [(ngModel)]="credenciales.password" placeholder="Contraseña">
               </div>
               <button type="button" (click)="login()" class="btn btn-primary px-4 pull-right">Iniciar</button>
             </div>
@@ -23,6 +26,8 @@
               <div>
                 <h2>CPC</h2>
                 <p>Sistema de Control de Producción y Costos</p>
+                <br>
+                <button type="button" (click)="display_dialog_licence=!display_dialog_licence" class="btn btn-default">Cargar Archivo de Licencia</button>
               </div>
             </div>
           </div>
@@ -31,3 +36,21 @@
     </div>
   </div>
 </div>
+
+<p-dialog header="Cargar Archivo de Licencia" [(visible)]="display_dialog_licence" modal="modal" width="400" [responsive]="true">
+    <p>Por favor seleccione un archivo de licencia o arrastrelo hasta la ventana.</p>
+    <p-fileUpload name="demo[]" url="http://localhost:4200/"
+      (onUpload)="onUpload($event)" accept=".txt" (onBeforeUpload)="onBeforeUpload($event)" maxFileSize="1000000" chooseLabel="Archivo"
+      uploadLabel="Subir" cancelLabel="Cancelar">      
+      <ng-template pTemplate type="content">
+        <ul *ngIf="uploadedFiles.length">
+          <li *ngFor="let file of uploadedFiles">{{file.name}} - {{file.size}} bytes</li>
+        </ul>
+      </ng-template>
+    </p-fileUpload>
+        <p-footer>
+            <div class="ui-dialog-buttonpane ui-helper-clearfix">                
+                <button type="button" (click)="display_dialog_licence=false" class="btn btn-sm btn-danger"><i class="fa fa-ban"></i> Cancelar</button>
+            </div>
+        </p-footer>
+</p-dialog>
