--- a/src/app/modules/administracion/tabla-productos/tabla-productos.component.html
+++ b/src/app/modules/administracion/tabla-productos/tabla-productos.component.html
@@ -2,7 +2,7 @@
   <h4>Productos <small>Tabla general de productos</small></h4>
   <div class="ui-widget-header" style="padding:4px 10px;border-bottom: 0 none">
     <button type="button" class="btn btn-sm btn-success" [routerLink]="['/admin/producto']"><i class="fa fa-plus"></i> Nuevo</button>
-    <button type="button" class="btn btn-sm btn-primary" [disabled]="!selected"><i class="fa fa-edit"></i> Detalle</button>
+    <button type="button" class="btn btn-sm btn-primary" (click)="goDetalleProducto()" [disabled]="!selected"><i class="fa fa-edit"></i> Detalle</button>
     <button type="button" class="btn btn-sm btn-danger" [disabled]="!selected"><i class="fa fa-trash"></i> Eliminar</button>
 
     <div style="float: right;">
