--- a/src/app/layouts/full-layout.component.html
+++ b/src/app/layouts/full-layout.component.html
@@ -1,3 +1,5 @@
+<app-block-loading></app-block-loading>
+
 <header class="app-header navbar">
   <button class="navbar-toggler d-lg-none" type="button" appMobileSidebarToggler>&#9776;</button>
   <a class="navbar-brand" href="#"></a>
@@ -31,9 +33,9 @@
         <span class="d-md-down-none">{{user}}</span>
       </a>
       <div class="dropdown-menu dropdown-menu-right" *dropdownMenu aria-labelledby="simple-dropdown">        
-        <a class="dropdown-item" href="#"><i class="fa fa-user"></i> Profile</a>        
-        <a class="dropdown-item" href="#"><i class="fa fa-shield"></i> Lock account</a>
-        <a class="dropdown-item" (click)="logout()"><i class="fa fa-lock"></i> Logout</a>
+        <!--<a class="dropdown-item" href="#"><i class="fa fa-user"></i> Profile</a>        
+        <a class="dropdown-item" href="#"><i class="fa fa-shield"></i> Lock account</a>-->
+        <a class="dropdown-item" (click)="logout()"><i class="fa fa-lock"></i> Cerrar Sesión</a>
       </div>
     </li>    
   </ul>
