--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -19,3 +19,11 @@ h4 small{
 .ui-treetable {
     font-size: 12.5px !important;
 }
+
+.ui-growl{
+    top: 100px !important;
+}
+
+.ui-widget-content .ui-dialog-buttonpane{
+    border: none !important;
+}
